style.css
*, *::before, *::after{
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body{
    text-align: center;
}

header, section, footer{
    width: 100%;
    border: 2px solid rgb(242, 0, 255);
}

.container{
    margin: 0px 10rem;
    padding: 3rem 0 8rem 0;
}

.hero-block .container{
    padding-top: 0;
}

nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 7rem;
    padding-top: 1rem;
}

ul{
    list-style: none;
    display: flex;
    flex-wrap: wrap;
    gap: 2em;
}

a{
    text-decoration: none;
}

.logo{
    margin-right: 1em;
}

.hero-content{
    display: flex;
    justify-content: space-between;
    align-items: stretch;
    min-height: 250px;
    gap: 2rem;
}

.hero-text{
    text-align: left;
    flex: 1;
    
}

.hero-image{
    background-color: grey;
    display: flex; 
    align-items: center;
    justify-content: center;
    flex: 1;
}

.cards-title{
    margin-bottom: 3rem;
}

.cards-group{
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    gap: 5rem;  
}

.cards-group figure{
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 150px;
    gap: 0.5rem;
}

.card{
    height: 150px;
    width: 150px;
    border: 4px solid blue;
    border-radius: 8px;
}

.quote-block .container{
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 8rem;
}

.quote-box{
    display: flex;
    flex-direction: column;
    width: 50%;
    text-align: right;
    gap: 1rem;
}

quote{
    text-align: left;
}

.quote-name{
    text-align: right;
}

.cta-block .container{
    padding-top: 8rem;
}

.cta-graphic{
    display: flex;
    justify-content: space-between;
    text-align: left;
    padding: 2rem 5rem;
    background-color: #3882F6;
    border-radius: 8px;
}

